tests/ui/type-alias-impl-trait/issue-53092.stderr
error[E0277]: the trait bound `U: From<T>` is not satisfied
  --> $DIR/issue-53092.rs:8:5
   |
LL |     |x| x.into()
   |     ^^^^^^^^^^^^ the trait `From<T>` is not implemented for `U`
   |
note: required by a bound in `make_bug`
  --> $DIR/issue-53092.rs:7:19
   |
LL | fn make_bug<T, U: From<T>>() -> Bug<T, U> {
   |                   ^^^^^^^ required by this bound in `make_bug`
help: consider restricting type parameter `U` with trait `From`
   |
LL | pub type Bug<T, U: std::convert::From<T>> = impl Fn(T) -> U + Copy;
   |                  +++++++++++++++++++++++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
